# https://doc.rust-lang.org/cargo/getting-started/first-steps.html#first-steps-with-cargo
[package]
name = "rust-tutorials"
version = "0.0.0"

# https://doc.rust-lang.org/cargo/reference/cargo-targets.html#configuring-a-target
[[bin]]
name = "basics"
path = "src/basics/binaries/main.rs"

[[bin]]
name = "format"
path = "src/basics/format/specifiers.rs"

[[bin]]
name = "ds"
path = "src/basics/datastructures/main.rs"

# FileIO
[[bin]]
name = "read-file"
path = "src/executors/fileio/read.rs"

[[bin]]
name = "write-file"
path = "src/executors/fileio/write.rs"

# HTTP Requests
[[bin]]
name = "get"
path = "src/executors/requests/get.rs"

[dependencies]
chrono = "0.4.31"
reqwest = { version = "0.11.22", features = ["blocking"] }
