# https://doc.rust-lang.org/cargo/getting-started/first-steps.html#first-steps-with-cargo
[package]
name = "rust-tutorials"
version = "0.0.0"

# https://doc.rust-lang.org/cargo/reference/cargo-targets.html#configuring-a-target
[[bin]]
name = "basics"
path = "src/basics/binaries/main.rs"

[[bin]]
name = "format"
path = "src/basics/format/specifiers.rs"

[[bin]]
name = "ds"
path = "src/basics/datastructures/main.rs"

# Run Commands
[[bin]]
name = "command"
path = "src/basics/command/main.rs"

# FileIO
[[bin]]
name = "read-file"
path = "src/executors/fileio/read.rs"

[[bin]]
name = "write-file"
path = "src/executors/fileio/write.rs"

# Thread Counter
[[bin]]
name = "count"
path = "src/count/counter.rs"

# HTTP Sample Requests
[[bin]]
name = "get-url"
path = "src/executors/requests/get_url.rs"

# HTTP Requests
[[bin]]
name = "health"
path = "src/executors/requests/health.rs"

[[bin]]
name = "secure"
path = "src/executors/requests/secure.rs"

[[bin]]
name = "offline"
path = "src/executors/requests/offline.rs"

# Run Commands
[[bin]]
name = "none"
path = "src/none_shall_pass.rs"

[[bin]]
name = "none-thread"
path = "src/none_shall_pass_thread.rs"

[[bin]]
name = "enum"
path = "src/wrapper/enum.rs"

[[bin]]
name = "struct"
path = "src/wrapper/struct.rs"

[dependencies]
chrono = "0.4.31"
reqwest = { version = "0.11.22", features = ["blocking"] }
regex = "1.10.2"
glob = "0.3"
log = "0.4.20"
